# forestexplorer

./: .gitignore  README.md  pyproject.toml  ruff.toml
data/assets/css/: base.css
forestexplorer/: __init__.py
streamlit/: app.py
streamlit/sites/: decision_tree.py  docs.py  explanaibility.py  fairness.py  home.py  random_forest.py
streamlit/src/: layout.py  params.py
